nivasa-macros/tests/trybuild/filter_catch_all_invalid.stderr
error: `#[catch_all]` does not take arguments
 --> tests/trybuild/filter_catch_all_invalid.rs:3:1
  |
3 | #[catch_all(HttpException)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `catch_all` (in Nightly builds, run with -Z macro-backtrace for more info)
