nivasa-macros/tests/trybuild/filter_catch_all_invalid.rs
use nivasa_macros::catch_all;

#[catch_all(HttpException)]
struct BrokenFilter;

fn main() {}
